List feed links on index page. Category links use the root namespace and work correctly. Not worrying too much about design at the moment.

--- a/app/assets/stylesheets/papers.css.scss
+++ b/app/assets/stylesheets/papers.css.scss
@@ -53,9 +53,10 @@ ul.papers {
     }
 }
 
-div.paperlist
-{
+.feedbar {
+  a { display: block; }
 }
+
 
 /* Recent comments sidebar */
 div.sidebar
